# mvalgrind

./: .clang-format  .gitignore  CMakeLists.txt  DECISIONS.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile
homebrew/: macgrind.rb  mvalgrind.rb
scripts/: build-release.sh  update-homebrew.sh
src/: args.cpp  classify.cpp  image.cpp  macgrind.hpp  main.cpp  mvalgrind.hpp  runner.cpp
tests/: CMakeLists.txt
tests/integration/: run_integration.sh
tests/integration/expected/: clean.txt  leak.txt  uninit.txt
tests/integration/fixtures/: clean.c  leak.c  sleep_loop.c  uninit.cpp
tests/unit/: test_args.cpp  test_classify.cpp
